# neural_network_from_scratch

./: README.md  pyproject.toml
src/: accuracy.py  layer.py  loss.py  main.py  network.py  optimizer.py  rocket_color_map.py  utils.py
